# oligo-melting

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  TODO.md  melt_duplex.py  melt_second.py  oligomelt.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help-request.md
.github/workflows/: pythonpackage.yml
docs/: index.md
lib/: meltlib.py  oligomeltlib.py
nntables/: freier.tsv  sugimoto_1.tsv
oligo_melting/: __init__.py  __init__.py.bak  alphabet.py  asserts.py  const.py  duplex.py  entab.py  entab.py.bak  melt.py  melt.test.py  nearest_neighbor.py  secstr.py  seq.py  sequence.py
oligo_melting/nntables/: allawy.tsv  sugimoto_2.tsv
oligo_melting/scripts/: __init__.py.bak  arguments.py  arguments.py.bak  melt.py  melt.py.bak  melt_duplex.py  melt_duplex.py.bak  melt_secstr.py  melt_secstr.py.bak
oligo_melting/test/: test_melt.py
oligo_melting/tests/: test_alphabet.py  test_melt.py.bak
scripts/: plot_melt_curves.R  plot_melt_curves_coupled.R
