[tool.poetry]
name = "oligo_melting"
version = "3.0.0"
description = """A Python3 package for melting temperature calculation
                 of oligonucleotides hybridization and secondary structures."""
authors = ["Gabriele Girelli <gigi.ga90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ggirelli/kman"
repository = "https://github.com/ggirelli/kman"
keywords = ["DNA", "chemistry", "melting", "temperature", "modeling", "RNA", "salt", "denaturant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "CHANGELOG.md",
    "LICENSE",
    "nntables",
]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.78"
joblib = "^1.0.1"
numpy = "^1.20.1"
pandas = "^1.2.2"
rich = "^9.10.0"
tqdm = "^4.58.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"melt" = "oligo_melting.scripts.melt:main"
