[tool.poetry]
name = "oligo_melting"
version = "3.1.0-dev"
description = """A Python3 package for oligonucleotide melting temperature calculation."""
authors = ["Gabriele Girelli <gigi.ga90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ggirelli/oligo-melting"
repository = "https://github.com/ggirelli/oligo-melting"
keywords = ["DNA", "chemistry", "melting", "temperature", "oligonucleotide", "RNA", "salt", "denaturant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
include = [
    "CHANGELOG.md",
    "LICENSE",
    "nntables",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
joblib = "^1.1.0"
rich = "^11.2.0"
rich-click = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"melt" = "oligo_melting.scripts.melt:main"
