[tool.poetry]
name = "oligo_melting"
version = "3.0.0"
description = """A Python3 package for melting temperature calculation
                 of oligonucleotides hybridization and secondary structures."""
authors = ["Gabriele Girelli <gigi.ga90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ggirelli/oligo-melting"
repository = "https://github.com/ggirelli/oligo-melting"
keywords = ["DNA", "chemistry", "melting", "temperature", "modeling", "RNA", "salt", "denaturant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
]
include = [
    "CHANGELOG.md",
    "LICENSE",
    "nntables",
]

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.0.1"
rich = "^9.10.0"
tqdm = "^4.58.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^22.3"
vulture = "^2.5"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"melt" = "oligo_melting.scripts.melt:main"
